<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="30dp"

        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="bottom"
            android:layout_marginTop="20dp"
            android:text="@string/interval"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="bottom"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:text="@string/_0_ms"
            android:textAlignment="center"
            android:textSize="30sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:maxHeight="4dp"
            android:minHeight="4dp"
            android:progressDrawable="@drawable/color_seekbar"
            android:thumbTint="@color/colorPrimary" />


        <TextView
            android:id="@+id/termine"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:gravity="center"
            android:text="@string/ok"
            android:layout_marginBottom="20dp"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
