<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Acc"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/interval"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/costum_interval"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:padding="60dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/FastestInterval"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/costum_fastest_interval"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:padding="60dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/SmallestDisplacement"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/costum_distance"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:padding="60dp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intervale"
                android:gravity="center"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fastestinterval"
                android:gravity="center"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/smallest_displacement"
                android:gravity="center"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </LinearLayout>


    <Button
            android:id="@+id/ralentisseur"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:background="@drawable/rallentisseur"
            android:foreground="@drawable/ic_bump"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/save"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/costum_exploit"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
</RelativeLayout>
